<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Type_of_temp"
            android:textSize="18dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="°C">
        </TextView>
            <Switch
                android:id="@+id/swithTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="°F">
            </TextView>
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Type_of_wind"
            android:textSize="18dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="м/с">
            </TextView>

            <Switch
                android:id="@+id/switchWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="км/ч">
            </TextView>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Type_of_press"
            android:textSize="18dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="мм.рт.ст">
            </TextView>

            <Switch
                android:id="@+id/switchPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Па">
            </TextView>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_settings"
            android:id="@+id/Set">
        </Button>
</LinearLayout>
</LinearLayout>